[FIX] mail: fix style of mention suggestion
Use the same style in full composer than in small composer.

Tweak style to account for small device, better handle overflows

task-5916878

--- a/addons/mail/static/src/core/common/composer.scss
+++ b/addons/mail/static/src/core/common/composer.scss
@@ -67,3 +67,7 @@
     padding-bottom: 10px;
     line-height: 1.42857143 !important; // so that input is rounded to 20px = 14px (base font) * 1.42857143 (line-height)
 }
+
+.o-mail-Composer-suggestionPartner-name.o-has-email {
+    max-width: 70%;
+}
